<resources>
    <string name="app_name">lab3</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="input_your_text">Input your text...</string>
    <string name="ok">OK</string>
    <string name="choice_font_family">Choice font family:</string>
    <string name="read">read</string>
    <string name="clear">Clear</string>
    <string name="idColumn">ID</string>
    <string name="textColumn">Text</string>
    <string name="fontColumn">Font</string>
</resources>
